@@ -12,7 +12,7 @@
 
 
 <i>
-    Latest version is 1.0.0, released on 2004/04/10
+    Latest version is 1.1.0, released on 2004/08/23
     (<a href="#changes">see changes</a>)
 </i>
 
@@ -89,7 +89,8 @@ project began reimplementing similar solution under Open Source terms:
 Althought it's nowhere need MSLU's API coverage yet, it already implements
 some functions that MSLU doesn't.
 <p>
-Latest CVS version of libunicows supports both unicows.dll and mzlu.dll.
+Latest version of libunicows supports both <tt>unicows.dll</tt> and
+<tt>mzlu.dll</tt>.
 
 
 <h3>Download</h3>
@@ -98,39 +99,39 @@ Latest CVS version of libunicows supports both unicows.dll and mzlu.dll.
 
 <tr>
     <td><a href="http://www.mingw.org">Mingw32</a></td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-mingw32.zip">libunicows-1.0.0-mingw32.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-mingw32.zip">libunicows-1.1.0-mingw32.zip</a></td>
 </tr>
 
 <tr>
     <td>Microsoft&nbsp;Visual&nbsp;C++&nbsp;6</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-msvc6.zip">libunicows-1.0.0-msvc6.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-msvc6.zip">libunicows-1.1.0-msvc6.zip</a></td>
 </tr>
 
 <tr>
     <td>Borland&nbsp;C++</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-bcc32.zip">libunicows-1.0.0-bcc32.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-bcc32.zip">libunicows-1.1.0-bcc32.zip</a></td>
 </tr>
 
 <tr>
     <td>Watcom&nbsp;C/C++</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-watcom.zip">libunicows-1.0.0-watcom.zip</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-watcom.zip">libunicows-1.1.0-watcom.zip</a></td>
 </tr>
 
 <tr>
     <td>DigitalMars</td>
     <td><a
-    href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-dmc.zip">libunicows-1.0.0-dmc.zip</a></td>
+    href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-dmc.zip">libunicows-1.1.0-dmc.zip</a></td>
 </tr>
 
 <tr>
     <td>LCC-Win32</td>
     <td><a
-    href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-lcc.zip">libunicows-1.0.0-lcc.zip</a></td>
+    href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-lcc.zip">libunicows-1.1.0-lcc.zip</a></td>
 </tr>
 
 <tr>
     <td>Source code</td>
-    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.0.0-src.tar.gz">libunicows-1.0.0-src.tar.gz</a></td>
+    <td><a href="http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.0-src.tar.gz">libunicows-1.1.0-src.tar.gz</a></td>
 </tr>
 
 </table>
@@ -141,6 +142,14 @@ See also the SF.net <a href="http://sourceforge.net/projects/libunicows">project
 
 <h3>Changes</h3>
 <a name="changes"></a>
+
+<b>version 1.1.0</b>
+<ul>
+<li>added support for MZLU (Mozilla Layer for Unicode)</li>
+<li>fixed <tt>_PfnLoadUnicows</tt> to work in exactly same manner as
+    in Microsoft version
+</li>
+</ul>
 
 <b>version 1.0.0</b>
 <ul>
